--- a/GitHubAwards/Supporting Files/Base.lproj/LaunchScreen.storyboard
+++ b/GitHubAwards/Supporting Files/Base.lproj/LaunchScreen.storyboard
@@ -14,15 +14,49 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background.png" translatesAutoresizingMaskIntoConstraints="NO" id="FKW-dj-p6b">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="riscas.png" translatesAutoresizingMaskIntoConstraints="NO" id="TV7-DY-o10">
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img-min.png" translatesAutoresizingMaskIntoConstraints="NO" id="ncB-sH-bex">
+                                <rect key="frame" x="85" y="165" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="zEf-ZQ-M73"/>
+                                    <constraint firstAttribute="height" constant="150" id="zLe-Z4-GP0"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="FKW-dj-p6b" secondAttribute="bottom" id="0r5-eE-Nj1"/>
+                            <constraint firstItem="ncB-sH-bex" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="E8w-5Q-CBc"/>
+                            <constraint firstItem="TV7-DY-o10" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" id="IoV-l8-5Gw"/>
+                            <constraint firstItem="FKW-dj-p6b" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="NUd-SV-8qE"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TV7-DY-o10" secondAttribute="bottom" id="R2g-7Q-twT"/>
+                            <constraint firstItem="ncB-sH-bex" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="YfJ-nC-tT7"/>
+                            <constraint firstItem="TV7-DY-o10" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="jEe-X4-Zi5"/>
+                            <constraint firstAttribute="trailing" secondItem="FKW-dj-p6b" secondAttribute="trailing" id="m3O-5o-KgC"/>
+                            <constraint firstItem="FKW-dj-p6b" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="-20" id="plX-39-2eS"/>
+                            <constraint firstAttribute="trailing" secondItem="TV7-DY-o10" secondAttribute="trailing" id="rIX-N6-JmG"/>
+                        </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background.png" width="750" height="1334"/>
+        <image name="img-min.png" width="438" height="431"/>
+        <image name="riscas.png" width="750" height="1334"/>
+    </resources>
 </document>
