--- a/GitHubAwards/CustomViews/LanguageTitleView.xib
+++ b/GitHubAwards/CustomViews/LanguageTitleView.xib
@@ -21,23 +21,23 @@
                     <rect key="frame" x="0.0" y="0.0" width="141" height="20"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SiF-KE-QmU">
-                            <rect key="frame" x="0.0" y="0.0" width="35" height="20"/>
+                            <rect key="frame" x="0.0" y="0.0" width="34" height="20"/>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="2Qt-0t-Rcl">
-                            <rect key="frame" x="30" y="-5" width="30" height="30"/>
+                            <rect key="frame" x="29" y="-5" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="30" id="3E2-74-o91"/>
                                 <constraint firstAttribute="height" constant="30" id="x9d-Ou-GJr"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="xx2-vN-9rO">
-                            <rect key="frame" x="65" y="-1" width="42" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <rect key="frame" x="64" y="-1" width="43.5" height="21"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B6N-1G-BMf">
-                            <rect key="frame" x="107" y="0.0" width="35" height="20"/>
+                            <rect key="frame" x="107" y="0.0" width="34" height="20"/>
                         </view>
                     </subviews>
                     <constraints>
